<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.retrofitexample.Home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.retrofitexample.Search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.retrofitexample.Profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_friendsFragment"
            app:destination="@id/friendsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.retrofitexample.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details" >/>
        <action
            android:id="@+id/action_detailsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/friendsFragment"
        android:name="com.example.retrofitexample.Friends.FriendsFragment"
        android:label="fragment_friends"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_friendsFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
</navigation>