<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailsFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.retrofitexample.DetailsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo"
            android:layout_width="@dimen/imageSize"
            android:layout_height="@dimen/imageSize"
            android:layout_margin="@dimen/paddingSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/personalInfoCard"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingSize"
            android:padding="@dimen/paddingSize"
            app:cardCornerRadius="4dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/personal_info"
                    android:textSize="@dimen/headerSize" />

                <TextView
                    android:id="@+id/name"
                    android:layout_marginStart="@dimen/paddingSize"
                    android:textSize="@dimen/textSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@{viewModel.name}"/>

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/paddingSize"
                    android:textSize="@dimen/textSize"
                    android:layout_gravity="left"
                    android:text="@{viewModel.age}"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/contactInfoCard"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingSize"
            android:padding="@dimen/paddingSize"
            app:cardCornerRadius="4dp"
            app:cardElevation="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personalInfoCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contact_info"
                    android:textSize="@dimen/headerSize" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="@dimen/paddingSize"
                    android:textSize="@dimen/textSize"
                    android:text="@{viewModel.address}"/>

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="@dimen/paddingSize"
                    android:textSize="@dimen/textSize"
                    android:text="@{viewModel.phone}"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="@dimen/paddingSize"
                    android:textSize="@dimen/textSize"
                    android:text="@{viewModel.email}"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addUserFab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="@dimen/paddingSize"
            android:layout_marginBottom="@dimen/paddingSize"
            android:contentDescription="@string/fab_content_desc"
            app:srcCompat="@drawable/add_person_icon"></com.google.android.material.floatingactionbutton.FloatingActionButton>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
